tests/errors/runtime.ConversionFailed.art
print to :logical "true"
print to :logical "false"
print to :logical "boom"